Introduce custom runtime image creation task